--- a/src/RudeToungeTester/RudeToungeTester/RudeToungeTester.CLI.csproj
+++ b/src/RudeToungeTester/RudeToungeTester/RudeToungeTester.CLI.csproj
@@ -1,8 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="SimpleInjector" Version="5.0.3" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\RudeToungeTesterML.Model\RudeToungeTesterML.Model.csproj" />
