--- a/src/RudeTongueTester/RudeTongueTester.Solver/RudeTongueTester.Solvers.csproj
+++ b/src/RudeTongueTester/RudeTongueTester.Solver/RudeTongueTester.Solvers.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\RudeToungeTesterML.Model\RudeTongueTesterML.Model.csproj" />
+    <ProjectReference Include="..\RudeTongueTesterML.Model\RudeTongueTesterML.Model.csproj" />
   </ItemGroup>
 
 </Project>
