--- a/src/RudeTongueTester/RudeTongueTesterML.ConsoleApp/RudeTongueTesterML.ConsoleApp.csproj
+++ b/src/RudeTongueTester/RudeTongueTesterML.ConsoleApp/RudeTongueTesterML.ConsoleApp.csproj
@@ -8,7 +8,7 @@
     <PackageReference Include="Microsoft.ML" Version="1.5.0-preview2" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\RudeToungeTesterML.Model\RudeTongueTesterML.Model.csproj" />
+    <ProjectReference Include="..\RudeTongueTesterML.Model\RudeTongueTesterML.Model.csproj" />
   </ItemGroup>
 
   <ItemGroup>
